      directories without running tests. (Alexander Belchenko)

    * ``bzr help hidden-commands`` lists all hidden commands. (Aaron Bentley)

    * ``bzr merge`` now has an option ``--pull`` to fall back to pull if
      local is fully merged into remote. (Jan Hudec)

    * ``bzr help formats`` describes available directory formats. (Aaron Bentley)

  INTERNALS:

    * A few tweaks directly to ``fileids_affected_by_revision_ids`` to
      help speed up processing, as well allowing to extract unannotated
      lines. Between the two ``fileids_affected_by_revision_ids`` is
      improved by approx 10%. (John Arbash Meinel)

    * Change Revision serialization to only write out millisecond
      resolution. Rather than expecting floating point serialization to
      preserve more resolution than we need. (Henri Weichers, Martin Pool)

    * Test suite ends cleanly on Windows.  (Vincent Ladeuil)

    * When 'encoding_type' attribute of class Command is equal to 'exact', 
      force sys.stdout to be a binary stream on Windows, and therefore
      keep exact line-endings (without LF -> CRLF conversion).
      (Alexander Belchenko)

    * Single-letter short options are no longer globally declared.  (Martin
      Pool)

    * Before using detected user/terminal encoding bzr should check
      that Python has corresponding codec. (Alexander Belchenko)

    * Formats for end-user selection are provided via a FormatRegistry (Aaron Bentley)

  BUG FIXES:

    * ``bzr missing --verbose`` was showing adds/removals in the wrong
      direction. (John Arbash Meinel)

    * ``bzr annotate`` now defaults to showing dotted revnos for merged
      revisions. It cuts them off at a depth of 12 characters, but you can
      supply ``--long`` to see the full number. You can also use
      ``--show-ids`` to display the original revision ids, rather than
      revision numbers and committer names. (John Arbash Meinel, #75637)

    * bzr now supports Win32 UNC path (e.g. \\HOST\path). 