@@ -57,6 +57,7 @@ IN DEVELOPMENT
       local is fully merged into remote. (Jan Hudec)
 
     * ``bzr help formats`` describes available directory formats. (Aaron Bentley)
+    * ``bzr help global-options`` describes the global options. (Aaron Bentley)
 
   INTERNALS:
 
